[package]
name = "pedersen-commitmets-client"
version = "0.1.0"
edition = "2021"

[dependencies]
curve25519-dalek = { version = "3", default-features = false, features = [
  "u64_backend",
  "serde",
] }
rand_core = { version = "0.5", features = ["getrandom"] }
sha2 = { version = "0.9", default-features = false }
serde = { version = "1.0", default-features = false, optional = true, features = [
  "derive",
] }
bincode = "1.3.3"
hex = "0.4.3"
